--- a/tasks/add_tag.yml
+++ b/tasks/add_tag.yml
@@ -20,8 +20,8 @@
     username: "{{ lookup('env', 'VMWARE_USER')|default(providers.vcenter.username) }}"
     password: "{{ lookup('env', 'VMWARE_PASSWORD')|default(providers.vcenter.password) }}"
     category_id: "{{ vcenter_category_info.category_results.category_id }}"
-    tag_name: "{{ item.1 }}_{{ item.0.item.item.app_name | default('') }}"
-    tag_description: "{{ item.1 }} {{ item.0.item.item.app_name | default('') }}"
+    tag_name: "{{ item.1 }}_{{ item.0.item.item[item.1] | default('') }}"
+    tag_description: "{{ item.1 }} {{ item.0.item.item[item.1] | default('') }}"
     state: present
   with_nested:
     - "{{ instances.results }}"
