change variable to undeploy

--- a/tasks/deprovision.yml
+++ b/tasks/deprovision.yml
@@ -47,7 +47,7 @@
     state: absent
   async: 7200
   poll: 0
-  register: vms_remove
+  register: undeploy
   loop: "{{ ansible_play_hosts }}"
   when:
     - nodes is defined
@@ -66,8 +66,8 @@
     - vm_remove.finished == 0
   retries: "{{ instance_wait_retry_limit }}"
   delay: 10
-  loop: "{{ vms_remove.results }}"
+  loop: "{{ undeploy.results }}"
   when:
     - nodes is defined
-    - vms_remove.results is defined
+    - undeploy.results is defined
     - item.ansible_job_id is defined
