--- a/tasks/add_tags.yml
+++ b/tasks/add_tags.yml
@@ -5,6 +5,7 @@
     hostname: "{{ lookup('env', 'VMWARE_HOST')|default(providers.vcenter.hostname) }}"
     username: "{{ lookup('env', 'VMWARE_USER')|default(providers.vcenter.username) }}"
     password: "{{ lookup('env', 'VMWARE_PASSWORD')|default(providers.vcenter.password) }}"
+    validate_certs: no
     category_name: "{{ item }}"
     category_description: ""
     category_cardinality: 'multiple'
@@ -19,6 +20,7 @@
     hostname: "{{ lookup('env', 'VMWARE_HOST')|default(providers.vcenter.hostname) }}"
     username: "{{ lookup('env', 'VMWARE_USER')|default(providers.vcenter.username) }}"
     password: "{{ lookup('env', 'VMWARE_PASSWORD')|default(providers.vcenter.password) }}"
+    validate_certs: no
     category_id: "{{ item.1.category_results.category_id }}"
     tag_name: "{{ item.0.item.item[item.1.item] | default('') }}"
     tag_description: ""
@@ -36,6 +38,7 @@
     hostname: "{{ lookup('env', 'VMWARE_HOST')|default(providers.vcenter.hostname) }}"
     username: "{{ lookup('env', 'VMWARE_USER')|default(providers.vcenter.username) }}"
     password: "{{ lookup('env', 'VMWARE_PASSWORD')|default(providers.vcenter.password) }}"
+    validate_certs: no
     object_name: "{{ item.instance.hw_name }}"
     object_type: VirtualMachine
     state: present
