--- a/tasks/provision.yml
+++ b/tasks/provision.yml
@@ -46,6 +46,7 @@
     hostname: "{{ lookup('env', 'VMWARE_HOST')|default(providers.vcenter.hostname) }}"
     username: "{{ lookup('env', 'VMWARE_USER')|default(providers.vcenter.username) }}"
     password: "{{ lookup('env', 'VMWARE_PASSWORD')|default(providers.vcenter.password) }}"
+    validate_certs: no
     name: "{{ item.instance.hw_name }}"
     state: present
     attributes:
