--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,6 +10,8 @@ vcenter:
   cluster: mycluster
   resource_pool: ~
 
+datastore_iso_folder: iso
+
 ansible_port: 22
 instance_wait_retry_limit: 300
 instance_wait_connection_timeout: 400
