--- a/tasks/preflight_check.yml
+++ b/tasks/preflight_check.yml
@@ -7,9 +7,11 @@
   when: ansible_version.full is version('2.9', '>=')
 
 - include_tasks: template_check_pre28.yml
+  loop: "{{ nodes }}"
   when: ansible_version.full is version('2.8', '<')
 
 - include_tasks: template_check.yml
+  loop: "{{ nodes }}"
   when: ansible_version.full is version('2.8', '>=')
 
 - name: ensure ansible_port variable is defined per node
