--- a/tasks/provision.yml
+++ b/tasks/provision.yml
@@ -15,6 +15,8 @@
     datastore: "{{ item.datastore|default(omit) }}"
     snapshot_src: "{{ item.snapshot_src|default(omit) }}"
     linked_clone: "{{ item.linked_clone|default(omit) }}"
+    cdrom: "{{ item.cdrom|default(omit) }}"
+    guest_id: "{{ template.guest_id|default(omit) }}"
     customvalues: "{{ item.customvalues|default(omit) }}"
     state: poweredon
     wait_for_ip_address: yes
