--- a/tasks/template_check.yml
+++ b/tasks/template_check.yml
@@ -5,7 +5,7 @@
     msg: "at least one disk must be specified when no template is used"
   when:
     - item.template is undefined
-    - item.disks[0].size is undefined | default(False)
+    - item.disk[0].size is undefined | default(False)
 
 - name: fail if both template and iso is specified
   fail:
