--- a/tasks/template_check_pre28.yml
+++ b/tasks/template_check_pre28.yml
@@ -2,10 +2,10 @@
 
 - name: fail if no template and disk specified
   fail:
-    msg: "{{ at least one disk must be specified when no template is used }}"
+    msg: "at least one disk must be specified when no template is used"
   when:
     - item.template is undefined
-    - item.disks[0].size is undefined | default(False)
+    - item.disk[0].size is undefined | default(False)
 
 - name: fail if both template and iso is specified
   fail:
