--- a/tasks/template_check.yml
+++ b/tasks/template_check.yml
@@ -60,19 +60,19 @@
     windows_nodes: "{{ windows_nodes|default([]) + [item | combine({'ansible_port': 5986})] }}"
   when:
     - item.ansible_port is not defined
-    - (template_facts.virtual_machines | selectattr('guest_name', 'match', item.template) | list | first).guest_fullname is defined
-    - "'windows' in (template_facts.virtual_machines | selectattr('guest_name', 'match', item.template) | list | first).guest_fullname | lower"
+    - (template_facts.virtual_machines | selectattr('guest_name', 'match', item.template) | list | first).guest_fullname is defined | default(False)
+    - "'windows' in (template_facts.virtual_machines | selectattr('guest_name', 'match', item.template) | list | first).guest_fullname | lower | default('')"
 
 - name: ensure ansible_port variable is defined per node (linux)
   set_fact:
     linux_nodes: "{{ linux_nodes|default([]) + [item | combine({'ansible_port': 22})] }}"
   when:
     - item.ansible_port is not defined
-    - (template_facts.virtual_machines | selectattr('guest_name', 'match', item.template) | list | first).guest_fullname is defined
-    - "'windows' not in (template_facts.virtual_machines | selectattr('guest_name', 'match', item.template) | list | first).guest_fullname | lower"
+    - (template_facts.virtual_machines | selectattr('guest_name', 'match', item.template) | list | first).guest_fullname is defined | default(False)
+    - "'windows' not in (template_facts.virtual_machines | selectattr('guest_name', 'match', item.template) | list | first).guest_fullname | lower | default('')"
 
 - name: check if any existing nodes with ansible_port defined
   set_fact:
     existing_nodes: "{{ existing_nodes|default([]) + [item] }}"
   when:
-    - item.ansible_port is defined or (template_facts.virtual_machines | selectattr('guest_name', 'match', item.template) | list | first).guest_fullname is not defined
+    - item.ansible_port is defined or ((template_facts.virtual_machines | selectattr('guest_name', 'match', item.template) | list | first).guest_fullname | default(None)) is undefined
