--- a/tasks/provision.yml
+++ b/tasks/provision.yml
@@ -16,7 +16,7 @@
     snapshot_src: "{{ item.snapshot_src|default(omit) }}"
     linked_clone: "{{ item.linked_clone|default(omit) }}"
     cdrom: "{{ item.cdrom|default(omit) }}"
-    guest_id: "{{ template.guest_id|default(omit) }}"
+    guest_id: "{{ item.guest_id|default(omit) }}"
     customvalues: "{{ item.customvalues|default(omit) }}"
     state: poweredon
     wait_for_ip_address: yes
