--- a/tasks/provision.yml
+++ b/tasks/provision.yml
@@ -15,7 +15,7 @@
     datastore: "{{ item.datastore|default(omit) }}"
     snapshot_src: "{{ item.snapshot_src|default(omit) }}"
     linked_clone: "{{ item.linked_clone|default(omit) }}"
-    cdrom: "{{ item.cdrom|default(omit) }}"
+    cdrom: "{{ node_iso_file[item.name]|default(omit) }}"
     guest_id: "{{ item.guest_id|default(omit) }}"
     customvalues: "{{ item.customvalues|default(omit) }}"
     state: poweredon
