--- a/tasks/provision.yml
+++ b/tasks/provision.yml
@@ -26,7 +26,7 @@
       num_cpus: "{{ item.cpu }}"
       scsi: paravirtual
       nested_virt: "{{ item.nested_virt|default(omit) }}"
-      boot_firmware: "{{ item.boot_firmware|default('bios') }}"
+      boot_firmware: "{{ item.boot_firmware|default(omit) }}"
     networks: "{{ item.networks }}"
     customization: "{{ item.customization|default(omit) }}"
   async: 7200
