--- a/tasks/provision.yml
+++ b/tasks/provision.yml
@@ -50,7 +50,7 @@
     username: "{{ lookup('env', 'VMWARE_USER')|default(providers.vcenter.username) }}"
     password: "{{ lookup('env', 'VMWARE_PASSWORD')|default(providers.vcenter.password) }}"
     validate_certs: no
-    name: "{{ item.instance.hw_name }}"
+    name: "{{ item.item.item.name | default(item.instance.hw_name) }}"
     state: present
     attributes:
       - name: app_name
