--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,6 +15,7 @@ datastore_iso_folder: iso
 ansible_port: 22
 instance_wait_retry_limit: 300
 instance_wait_connection_timeout: 400
+ip_wait_retry_limit: 600
 
 enable_custom_attributes: yes
 enable_tags: yes
