set ansible password for deprovision as well

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,11 @@
 ---
 
+# this seems to be needed as ansible_password is not passed into the loop
+- name: set ansible password
+  set_fact:
+    ansible_password: "{{ ansible_password | default('') }}"
+  no_log: true
+
 - include_tasks: preflight_check.yml
   run_once: yes
   when: role_action == 'provision'
